...
        case .title:
            if self.isEditing {
                let tf = (cell as! TextFieldCell).textField
                tf?.text = self.detailItem?.title
                tf?.tag  = TAG_TEXTFIELD_TITLE
                tf?.placeholder = "Title".localized
                tf?.accessibilityIdentifier = "textFieldTitle"
                tf?.delegate = self
            }
            else {
                (cell as! LabelCell).label?.text = self.detailItem?.title
            }
        case .url:
            if self.isEditing {
                let tf = (cell as! TextFieldCell).textField
                tf?.text = self.detailItem?.url
                tf?.tag  = TAG_TEXTFIELD_URL
                tf?.placeholder = "URL".localized
                tf?.accessibilityIdentifier = "textFieldURL"
                tf?.delegate = self
            }
            else {
                (cell as! LabelCell).label?.text = self.detailItem?.url
            }
            
...
